--- a/streamlists/package.json
+++ b/streamlists/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "stream-list",
-  "version": "1.0.0",
-  "description": "A simple list of streams",
-  "main": "index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "author": "Latesha Carter",
-  "license": "ISC",
+  "name": "streamlists",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
